# yunzhidao_Ai

./: .gitignore  .vercelignore  AGENTS.md  BUILD_RULES.md  FREE_API_GUIDE.md  OPTIMIZATION_SUMMARY.md  README_FIXED.md  REFACTOR_PLAN.md  TASK.md  TELEGRAM_DEVBOT.md  VERCEL_DEPLOY.md  conftest.py  debug_prompt_conflict.py  index.html  mockup.html  package-lock.json  package.json  pyproject.toml  pytest.ini  requirements.txt  server.js  start-server.bat  start_backend.bat  start_bot.bat  start_telegram_devbot.bat  tailwind.config.js  test_anthropic_client.py  test_api_debug.html  test_backend.py  test_backend_upgrade.py  test_compose_dedupe_backend.py  test_devbot_ai.py  test_devbot_config.py  test_devbot_store.py  test_free_api.py  test_optimized_api.py  test_qwen_client.py  test_qwen_video.py  test_rewrite_backend.py  test_rewrite_sequential_backend.py  (+6 more)
api/: [...route].py  __init__.py
backend/: README.md  __init__.py  anthropic_client.py  compose_dedupe_service.py  config.example.json  devbot_ai.py  devbot_config.py  devbot_executor.py  devbot_store.py  devbot_telegram.py  free_scrapers.py  free_search.py  gemini_models.py  gemini_video.py  main.py  platform_utils.py  qwen_client.py  qwen_video.py  requirements.txt  rewrite_copy.py  rewrite_service.py  runtime_paths.py  script_library.py  shared_types.py  telegram_devbot.py
scripts/: import_script_library_json.py  reindex_script_library_material_ids.py  validate-hooks.ts  validate-rewrite.ts  validate-structure.ts  validate-viral.ts
server/: config.example.json
src/: App.tsx  index.css  types.ts
凡哥/: .gitignore  (+9 more)
(+76 files in other folders)
