[project]
name = "yunzhidao-ai"
version = "0.1.0"
description = "云智道AI 内部内容增长工作台"
requires-python = ">=3.12,<3.13"
dependencies = [
  "fastapi>=0.116.0,<1.0.0",
  "uvicorn>=0.35.0,<1.0.0",
  "beautifulsoup4>=4.12.0",
  "duckduckgo-search>=4.0.0",
  "lxml>=4.9.0",
  "requests>=2.31.0,<3.0.0",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"
